<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="settings_app_name">Odroid Settings</string>
    <string name="launcher_settings_app_name">Odroid Settings</string>
    <string name="launcher_network_app_name">Network</string>
    <string name="launcher_restricted_profile_app_name">Restricted Profile</string>
    <string name="header_category_suggestions">Suggestions</string>
    <string name="header_category_quick_settings">Quick Settings</string>
    <string name="header_category_general_settings">General Settings</string>
    <string name="dismiss_suggestion">Dismiss the suggestion</string>
    <string name="hotwording_title">\"OK Google\" detection</string>
    <string name="hotwording_summary">Talk to Google Assistant anytime</string>
    <string name="header_category_device">Device</string>
    <string name="header_category_preferences">Preferences</string>
    <string name="header_category_accessories">Remote &amp; accessories</string>
    <string name="header_category_personal">Personal</string>
    <string name="connect_to_network">Connect to network</string>
    <string name="add_an_account">Add an account</string>
    <string name="accounts_category_title">Accounts &amp; sign-in</string>
    <string name="accounts_category_summary_no_account">No accounts</string>
    <plurals name="accounts_category_summary">
        <item quantity="one"><xliff:g id="accounts_number">%1$d</xliff:g> account</item>
        <item quantity="other"><xliff:g id="accounts_number">%1$d</xliff:g> accounts</item>
    </plurals>
    <string name="accounts_slice_summary">Media services, Assistant, Payments</string>
    <string name="connectivity_network_category_title">Network &amp; Internet</string>
    <string name="sound_category_title">Sound</string>
    <string name="applications_category_title">Apps</string>
    <string name="device_pref_category_title">Device Preferences</string>
    <string name="remotes_and_accessories_category_title">Remotes &amp; accessories</string>
    <string name="remotes_and_accessories_category_summary_no_bluetooth_device">No connected Bluetooth devices</string>
    <plurals name="remotes_and_accessories_category_summary">
        <item quantity="one"><xliff:g id="accessories_number">%1$d</xliff:g> accessory</item>
        <item quantity="other"><xliff:g id="accessories_number">%1$d</xliff:g> accessories</item>
    </plurals>
    <string name="display_and_sound_category_title">Display &amp; Sound</string>
    <string name="help_and_feedback_category_title">Help &amp; Feedback</string>
    <string name="privacy_category_title">Privacy</string>
    <string name="privacy_device_settings_category">Device Settings</string>
    <string name="privacy_app_settings_category">App Settings</string>
    <string name="privacy_category_summary">Location, Usage &amp; Diagnostics, Ads</string>
    <string name="add_account">Add account</string>
    <string name="account_header_remove_account">Remove account</string>
    <string name="account_sync">Choose synced apps</string>
    <string name="sync_now">Sync now</string>
    <string name="sync_in_progress">Syncing\u2026</string>
    <string name="last_synced">Last synced <xliff:g id="time">%1$s</xliff:g></string>
    <string name="sync_disabled">Disabled</string>
    <string name="account_remove">Remove account</string>
    <string name="account_remove_failed">Can\'t remove account</string>
    <string name="sync_item_title"><xliff:g id="authority" example="Calendar">%s</xliff:g></string>
    <string name="sync_one_time_sync">Sync now<xliff:g id="last_sync_time">\n%1$s</xliff:g></string>
    <string name="sync_failed">Sync failed</string>
    <string name="sync_active">Sync active</string>
    <string name="connectivity_wifi">Wi-Fi</string>
    <string name="connectivity_ethernet">Ethernet</string>
    <string name="connectivity_summary_ethernet_connected">Ethernet connected</string>
    <string name="connectivity_summary_no_network_connected">No network connected</string>
    <string name="connectivity_summary_wifi_disabled">Wi-Fi is turned off</string>
    <string name="wifi_setting_always_scan">Scanning always available</string>
    <string name="wifi_setting_always_scan_context">Let Google\'s location service and other apps scan for networks, even when Wi-Fi is off</string>
    <string name="wifi_setting_enable_wifi">Wi-Fi</string>
    <string name="connectivity_hint_message">Connect to network</string>
    <string name="apps_recently_used_category_title">Recently opened apps</string>
    <string name="apps_see_all_apps">See all apps</string>
    <string name="apps_permissions_category_title">Permissions</string>
    <string name="all_apps_title">All apps</string>
    <string name="all_apps_show_system_apps">Show system apps</string>
    <string name="all_apps_installed">Installed apps</string>
    <string name="all_apps_other">System apps</string>
    <string name="all_apps_disabled">Disabled apps</string>
    <string name="device_daydream">Screen saver</string>
    <string name="device_display">Display</string>
    <string name="device_display_sound">Display &amp; Sound</string>
    <string name="device_sound">Sound</string>
    <string name="device_surround_sound">Surround sound</string>
    <string name="device_sound_effects">System sounds</string>
    <string name="device_sound_bootsafe">Enforce safe volume</string>
    <string name="device_sound_disable_volume">Disable the volume</string>
    <string name="device_bit_stream">Decode &#038; BitStream</string>
    <string name="hdmi">HDMI</string>
    <string name="device_apps">Applications</string>
    <string name="device_storage">Storage</string>
    <string name="device_reset">Factory reset</string>
    <string name="device_backup_restore">Backup &amp; restore</string>
    <string name="device_factory_reset">Factory data reset</string>
    <string name="device_calibration">Calibration</string>
    <string name="device_energy_saver">Energy saver</string>
    <string name="surround_sound_select_formats">Select formats</string>
    <string name="surround_sound_category_title">Surround Sound</string>
    <string name="surround_sound_format_ac3">Dolby Digital</string>
    <string name="surround_sound_format_e_ac3">Dolby Digital Plus</string>
    <string name="surround_sound_format_dts">DTS</string>
    <string name="surround_sound_format_dts_hd">DTS-HD</string>
    <string name="surround_sound_format_iec61937">IEC61937</string>
    <string name="surround_sound_auto_info">Note: The Auto option may not work if your device does not report its supported formats correctly.</string>
    <string name="surround_sound_auto_summary">Auto: Use the formats that your device reports supporting (recommended)</string>
    <string name="surround_sound_none_summary">None: Never use surround sound</string>
    <string name="surround_sound_manual_summary">Manual: Select which formats to use</string>
    <string name="advanced_display_settings_title">Advanced display settings</string>
    <string name="advanced_sound_settings_title">Advanced sound settings</string>
    <string name="game_mode_title">Allow game mode</string>
    <string name="kiosk">Kiosk</string>
    <string name="kiosk_select">Select Application</string>
    <string name="kiosk_target_title">Start Application</string>
    <string name="kiosk_mode_title">Kiosk mode</string>
    <string name="kiosk_lock_title">Kiosk Locking</string>
    <string name="kiosk_mode_message">Kiosk mode will be applied after reboot</string>
    <string name="kiosk_lock_message">Kiosk locking will be applied after reboot</string>
    <string name="sysbar_volume_title">SystemBar Voluem Icon Hide</string>
    <string name="sysbar_volume_message">SystemBar Voluem Icon Setting  will be applied after reboot</string>
    <string name="device_storage_clear_cache_title">Clear cached data?</string>
    <string name="device_storage_clear_cache_message">This will clear cached data for all apps.</string>
    <string name="accessories_add">Add accessory</string>
    <string name="accessory_state_pairing">Pairing&#8230;</string>
    <string name="accessory_state_connecting">Connecting&#8230;</string>
    <string name="accessory_state_error">Couldn\'t pair</string>
    <string name="accessory_state_canceled">Canceled</string>
    <string name="accessory_state_paired">Paired</string>
    <string name="accessory_options">Accessory</string>
    <string name="accessory_unpair">Unpair</string>
    <string name="accessory_battery">Battery <xliff:g id="percentage">%1$d</xliff:g>%%</string>
    <string name="accessory_unpairing">Unpairing device&#8230;</string>
    <string name="accessory_connected">Connected</string>
    <string name="accessory_change_name">Change name</string>
    <string name="accessory_change_name_title">Enter a new name for this accessory</string>
    <string name="accessories_add_title">Searching for accessories&#8230;</string>
    <string name="accessories_add_bluetooth_inst">Before pairing your Bluetooth devices, make sure they\'re in pairing mode</string>
    <string name="accessories_autopair_msg">A device was found and will automatically pair in <xliff:g id="countdown">%1$s</xliff:g> seconds</string>
    <string name="error_action_not_supported">This action isn\'t supported</string>
    <string name="bluetooth_pairing_request">Bluetooth pairing request</string>
    <string name="bluetooth_confirm_passkey_msg">To pair with: &lt;b><xliff:g id="device_name">%1$s</xliff:g>&lt;/b>, make sure it\'s showing this passkey: &lt;b><xliff:g id="passkey">%2$s</xliff:g>&lt;/b></string>
    <string name="bluetooth_incoming_pairing_msg">From: &lt;b><xliff:g id="device_name">%1$s</xliff:g>&lt;/b>&lt;br>Pair with this device?</string>
    <string name="bluetooth_display_passkey_pin_msg">To pair with: &lt;b><xliff:g id="device_name">%1$s</xliff:g>&lt;/b>&lt;br>Type on it: &lt;b><xliff:g id="passkey">%2$s</xliff:g>&lt;/b>, then press Return or Enter.</string>
    <string name="bluetooth_enter_pin_msg">To pair with: &lt;b><xliff:g id="device_name">%1$s</xliff:g>&lt;/b>, &lt;br>Type the device\'s required PIN:</string>
    <string name="bluetooth_enter_passkey_msg">To pair with: &lt;b><xliff:g id="device_name">%1$s</xliff:g>&lt;/b>, &lt;br>Type the device\'s required passkey:</string>
    <string name="bluetooth_pin_values_hint">Usually 0000 or 1234</string>
    <string name="bluetooth_pair">Pair</string>
    <string name="bluetooth_cancel">Cancel</string>
    <string name="send_feedback">Send feedback</string>
    <string name="system_security">Security &amp; restrictions</string>
    <string name="system_diagnostic">Usage &amp; diagnostics</string>
    <string name="about_ads">Ads</string>
    <string name="legal_information">Legal information</string>
    <string name="copyright_title">Copyright</string>
    <string name="license_title">License</string>
    <string name="terms_title">Terms and conditions</string>
    <string name="webview_license_title">System WebView License</string>
    <string name="system_location">Location</string>
    <string name="inputs_blu_ray">Blu-ray</string>
    <string name="inputs_cable">Cable</string>
    <string name="inputs_dvd">DVD</string>
    <string name="inputs_game">Game console</string>
    <string name="inputs_aux">Aux</string>
    <string name="inputs_custom_name">Custom name</string>
    <string name="inputs_show">Show this input</string>
    <string name="input_header_names">Name</string>
    <string name="device_apps_permissions">App permissions</string>
    <string name="special_access">Special app access</string>
    <string name="mouse">Mouse</string>
    <string name="mouse_accel">Mouse Acceleration</string>
    <string name="mouse_accel_info">Configure the Mouse pointer speed Acceleration.</string>
    <string name="mouse_right">Right Button as Back Button</string>
    <string name="mouse_right_info">Mouse Right Button as Back Button ON/OFF.</string>
</resources>