<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2020 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:title="@string/privacy_category_title"
                  xmlns:custom="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/privacy_device_settings_category" />

    <Preference
        android:key="location"
        android:title="@string/system_location"
        android:fragment="hardkernel.odroid.settings.system.LocationFragment" />
    <hardkernel.odroid.twopanelsettings.slices.SlicePreference
        android:key="usageAndDiag"
        android:title="@string/system_diagnostic"
        android:fragment="hardkernel.odroid.twopanelsettings.slices.SliceFragment"
        custom:uri="content://com.google.android.settings.usage/usagediagnostics">
        <intent android:action="com.google.android.settings.USAGE_AND_DIAGNOSTICS_SETTING"/>
    </hardkernel.odroid.twopanelsettings.slices.SlicePreference>
    <Preference
        android:key="ads"
        android:title="@string/about_ads">
        <intent android:action="com.google.android.gms.settings.ADS_PRIVACY" />
    </Preference>

    <PreferenceCategory android:title="@string/privacy_app_settings_category" />

    <hardkernel.odroid.twopanelsettings.slices.SlicePreference
        android:key="permissions"
        android:title="@string/device_apps_permissions"
        android:fragment="hardkernel.odroid.twopanelsettings.slices.SliceFragment"
        custom:uri="content://com.android.packageinstaller.permission/general" />
    <Preference
        android:key="specialAccess"
        android:title="@string/special_access"
        android:fragment="hardkernel.odroid.settings.device.apps.specialaccess.SpecialAppAccess" />
    <Preference
        android:key="security"
        android:title="@string/system_security"
        android:fragment="hardkernel.odroid.settings.system.SecurityFragment" />

</PreferenceScreen>
